--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,13 +12,18 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
-    tools:context="com.sjj.echo.umsinterface.MainActivity">
+    tools:context="com.sjj.echo.umsinterface.FrameActivity">
 
     <LinearLayout
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical">
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +33,7 @@
             />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="70dp"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
             android:gravity="center"
@@ -63,8 +68,12 @@
                     android:text="@string/ums_history_btn_tip"
                     />
             </LinearLayout>
-
         </LinearLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            />
         <TextView
             android:layout_weight="1"
             android:layout_width="match_parent"
@@ -74,7 +83,7 @@
             />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="70dp"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
             android:gravity="right"
@@ -121,40 +130,47 @@
                 android:layout_height="wrap_content"
                 android:text="@string/ums_readonly_check_tip"/>
         </LinearLayout>
-        <Button
-            android:id="@+id/status"
-            android:layout_gravity="center"
-            android:gravity="left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:textAppearance="@style/title_style"
-            android:background="@drawable/status_select"
-            android:text="(click to refresh)" />
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-        <LinearLayout
-            android:layout_margin="8dp"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/about"
+            android:text="@string/status"/>
+        <TextView
+            android:id="@+id/status"
             android:layout_gravity="center"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@mipmap/head"/>
-            <TextView
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#bb9931"
-                android:text="write by @echo off\n outofmemo@qq.com\n"/>
-        </LinearLayout>
+            android:gravity="left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#f0f0f0"
+            android:text="(click to refresh)\n\n\n\n" />
+        <!--<Space-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--/>-->
+        <!--<LinearLayout-->
+            <!--android:layout_margin="8dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/about"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:orientation="horizontal">-->
+            <!--<ImageView-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:background="@mipmap/head"/>-->
+            <!--<TextView-->
+                <!--android:layout_gravity="center"-->
+                <!--android:gravity="center"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textColor="#bb9931"-->
+                <!--android:text="write by @echo off\n outofmemo@qq.com\n"/>-->
+        <!--</LinearLayout>-->
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
