--- a/app/src/main/res/layout/activity_new_image.xml
+++ b/app/src/main/res/layout/activity_new_image.xml
@@ -3,21 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_add_mount_activitry"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sjj.echo.umsinterface.MountActivity">
+    tools:context="com.sjj.echo.umsinterface.FrameActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="4dp"
         android:layout_centerInParent="true"
         android:orientation="vertical">
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="bottom"
             android:text="@string/image_dir_tip"
             />
@@ -34,7 +38,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:text="/sdcard"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 />
             <LinearLayout
@@ -45,7 +49,7 @@
                 <Button
                     android:id="@+id/image_dir_btn"
                     android:layout_width="80dp"
-                    android:layout_height="40dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/ums_select_btn_tip"
@@ -53,6 +57,10 @@
             </LinearLayout>
 
         </LinearLayout>
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -70,11 +78,14 @@
                 android:id="@+id/image_file_edit"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 />
         </LinearLayout>
-
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -83,7 +94,7 @@
             />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
             android:gravity="right"
@@ -97,11 +108,28 @@
                 android:layout_gravity="center_vertical"
                 />
         </LinearLayout>
-
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/format"
+            android:id="@+id/image_format">
+        </Spinner>
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"/>
         <Button
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:text="@string/image_create"
             android:id="@+id/image_create"/>
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"/>
     </LinearLayout>
 </RelativeLayout>
