--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="tab_titles">
+        <item>快速启动</item>
         <item>U盘</item>
         <item>挂载</item>
         <item>已挂载</item>
