--- a/app/src/main/res/layout/exlporer_file_list.xml
+++ b/app/src/main/res/layout/exlporer_file_list.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="4"
+            android:ellipsize="marquee"
             android:singleLine="true"
             android:gravity="top"
             android:id="@+id/file_list_desc"/>
