--- a/app/src/main/res/layout/quick_start_layout.xml
+++ b/app/src/main/res/layout/quick_start_layout.xml
@@ -9,8 +9,8 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
         <ImageView
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,14 +19,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quick_use_group"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/quick_use"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:text="@string/using"
+                    android:textSize="25sp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:background="@mipmap/ic_refresh_white_36dp"/>
+            </LinearLayout>
             <TextView
-                android:id="@+id/quick_use"
+                android:id="@+id/quick_use_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:ellipsize="marquee"
-                android:text="@string/using"
-                android:textSize="35sp" />
+                android:singleLine="true"
+                android:ellipsize="marquee"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -95,12 +115,11 @@
         android:background="#91b648"
         android:orientation="horizontal">
         <ImageView
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@mipmap/ic_near_me_white_36dp"/>
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/ic_launch_white_48dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_weight="1"
@@ -110,7 +129,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="35sp"
+                android:ellipsize="end"
+                android:textSize="30sp"
                 android:text="@string/quick_create"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -149,7 +169,7 @@
         </LinearLayout>
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:background="@android:drawable/button_onoff_indicator_on"
             android:gravity="center"
             android:layout_gravity="right|center_vertical"
@@ -184,7 +204,8 @@
             <ListView
                 android:id="@+id/quick_history_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:divider="@null">
 
             </ListView>
     </LinearLayout>
