--- a/app/src/main/res/layout/quick_list_cell_layout.xml
+++ b/app/src/main/res/layout/quick_list_cell_layout.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:layout_gravity="center_vertical"
         android:layout_margin="5dp"
-        android:text="start"/>
+        android:text="@string/start"/>
     <TextView
         android:layout_width="0dp"
         android:id="@+id/quick_list_cell_txt"
