--- a/app/src/main/res/layout/quick_start_layout.xml
+++ b/app/src/main/res/layout/quick_start_layout.xml
@@ -9,8 +9,8 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
         <ImageView
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="18dp"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/quick_status"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -35,6 +36,7 @@
                     android:text="@string/using"
                     android:textSize="25sp" />
                 <ImageView
+                    android:id="@+id/refresh_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|right"
@@ -49,7 +51,7 @@
                 android:ellipsize="marquee"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 >
@@ -63,12 +65,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:textColor="@android:color/white"
+                    android:id="@+id/quick_usb_text"
                     android:layout_weight="1"
-                    android:text="@string/usb_connection"/>
+                    android:text="@string/quick_no_usb"/>
                 <Button
                     android:id="@+id/quick_usb_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
+                    android:visibility="invisible"
                     android:background="@android:drawable/button_onoff_indicator_on"
                     android:gravity="center"
                     android:layout_gravity="right|center_vertical"
@@ -78,7 +82,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 >
@@ -100,6 +104,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:id="@+id/quick_mount_btn"
+                    android:visibility="invisible"
                     android:background="@android:drawable/button_onoff_indicator_on"
                     android:gravity="center"
                     android:layout_gravity="right|center_vertical"
