--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,10 +17,7 @@
         android:icon="@mipmap/ic_image"
         app:showAsAction="always" />-->
     <item android:id="@+id/action_exec"
-        android:title="@string/ums_cmd"
-        android:orderInCategory="100"
-        android:icon="@mipmap/ic_exec"
-        app:showAsAction="never" />
+        android:title="@string/ums_cmd" />
     <!--<item android:id="@+id/action_file_history"-->
         <!--android:title="@string/ums_show_history"-->
         <!--android:orderInCategory="100"-->
@@ -30,29 +27,19 @@
         <!--android:orderInCategory="100"-->
         <!--app:showAsAction="never" />-->
     <item android:id="@+id/action_reboot_kernel"
-        android:title="@string/ums_reboot_kernel"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/ums_reboot_kernel" />
     <item android:id="@+id/action_reboot_android"
-        android:title="@string/ums_reboot_android"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/ums_reboot_android"/>
     <item android:id="@+id/action_reboot_recovery"
-        android:title="@string/ums_reboot_recovery"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/ums_reboot_recovery" />
     <item android:id="@+id/action_reboot_fastboot"
-        android:title="@string/ums_reboot_fastboot"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/ums_reboot_fastboot" />
     <item android:id="@+id/action_check_update"
-        android:title="@string/check_update"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/check_update"/>
     <item android:id="@+id/action_report"
-        android:title="@string/create_report"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/create_report" />
+    <item android:id="@+id/open_explorer"
+        android:title="@string/open_explorer"/>
     <!--<item android:id="@+id/action_quick_config"-->
         <!--android:title="@string/quick_config"-->
         <!--android:orderInCategory="100"-->
