--- a/app/src/main/res/layout/quick_start_layout.xml
+++ b/app/src/main/res/layout/quick_start_layout.xml
@@ -141,6 +141,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
