--- a/app/src/main/res/menu/explorer_main.xml
+++ b/app/src/main/res/menu/explorer_main.xml
@@ -23,5 +23,9 @@
         android:orderInCategory="100"
         android:title="@string/explorer_refresh"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/explorer_exit"
+        android:orderInCategory="100"
+        android:title="@string/exit"
+        app:showAsAction="never" />
 </menu>
