--- a/app/src/main/res/values-zh/arrays.xml
+++ b/app/src/main/res/values-zh/arrays.xml
@@ -21,4 +21,11 @@
         <item>日期(降序)</item>
         <item>大小(降序)</item>
     </string-array>
+    <string-array name="open_as">
+        <item>文本</item>
+        <item>音频</item>
+        <item>视频</item>
+        <item>图片</item>
+        <item>其他</item>
+    </string-array>
 </resources>
