--- a/app/src/main/res/layout/quick_start_layout.xml
+++ b/app/src/main/res/layout/quick_start_layout.xml
@@ -13,8 +13,8 @@
             android:layout_marginTop="18dp"
             android:layout_marginBottom="18dp"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@mipmap/ic_insert_drive_file_white_48dp"/>
         <LinearLayout
             android:layout_width="match_parent"
@@ -122,8 +122,8 @@
         <ImageView
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@mipmap/ic_launch_white_48dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
